Fix for misalignment of parent indicator icons in menu top-level fixes #255

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -61,7 +61,7 @@
 						opacity: 0.5;
 						font-family: FontAwesome;
 						content: "\f078";
-						text-align: center;
+						text-align: right;
 					}
 				}
 				&.g-selected {
@@ -112,6 +112,7 @@
 
 	    			&:after {
 						content: "\f054";
+						text-align: center;
 					}			
 				}
 				&.g-selected {
