--- a/themes/hydrogen/common/scss/mixins/_nav.scss
+++ b/themes/hydrogen/common/scss/mixins/_nav.scss
@@ -73,6 +73,9 @@
 							border-radius: $core-border-radius;
 							margin: -0.2rem 0 -0.2rem 0.5rem;
 							padding: 0.2rem;
+							&:after {
+								text-align: center;
+							}
 						}
 					}
 				}
@@ -103,6 +106,9 @@
 							padding: 0.1rem;
 							margin-top: -0.1rem;
 							margin-right: -0.1rem;
+							&:after {
+								text-align: center;
+							}
 						}
 					}
 				}
